--- a/css/main-style.css
+++ b/css/main-style.css
@@ -2374,6 +2374,7 @@ input#amount:focus {
     text-align: center;
     width: 40px;
     color: red;
+    -webkit-transition: all 0.3s ease-in;
     transition: all 0.3s ease-in;
     opacity: 0;
 }
@@ -2501,7 +2502,6 @@ input#amount:focus {
 .registar-forma-pretrage input:focus {
     border-color: transparent;
     outline: 0;
-    -webkit-box-shadow: none;
     box-shadow: none;
 }
 
@@ -2532,6 +2532,7 @@ input#amount:focus {
 }
 
 .registar-forma-premium.premium .card-button {
+    background: url(../assets/premium-pretraga-ico.png), -webkit-linear-gradient(#00B496, #00B496);
     background: url(../assets/premium-pretraga-ico.png), linear-gradient(#00B496, #00B496);
     background-size: contain;
     background-position: center right;
@@ -2539,6 +2540,7 @@ input#amount:focus {
 }
 
 .registar-forma-premium.premium-plus .card-button {
+    background: url(../assets/premium-plus-pretraga-ico.png), -webkit-linear-gradient(#00B496, #00B496);
     background: url(../assets/premium-plus-pretraga-ico.png), linear-gradient(#00B496, #00B496);
     background-size: contain;
     background-position: center right;
@@ -2598,7 +2600,11 @@ label.cek.registarski :checked+span {
 
 .lista-rezultata-pretrage.registar-firme>li {
     overflow-y: auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
 }
 
@@ -2828,9 +2834,7 @@ p.label-racuni .brojke {
 @media (min-width:991px) {
     .okvir-boksova {
         display: -webkit-box;
-        display: -moz-box;
         display: -ms-flexbox;
-        display: -webkit-flex;
         display: flex;
     }
 }
