Set visible default tabs in profil firme.

--- a/css/main-style.css
+++ b/css/main-style.css
@@ -3097,6 +3097,10 @@ a.paginate_button.current {
     margin-top: 30px;
 }
 
+.profil-centar>*:not(.tab-podaci):not(.tab-osnovno) {
+    display: none;
+}
+
 
 /* - Responsive breakpoints - */
 
