--- a/css/main-style.css
+++ b/css/main-style.css
@@ -3146,6 +3146,36 @@ a.paginate_button.current {
     margin-left: 7px;
 }
 
+.card-promo .carousel .item .card-naslov-vijesti {
+    white-space: normal;
+}
+
+.card-promo .carousel-indicators li {
+    background: #d4d4d4;
+}
+
+.card-promo .carousel-indicators li.active {
+    background: #785096;
+}
+
+.card-promo .carousel-inner {
+    padding-bottom: 30px;
+}
+
+.card-promo .carousel-indicators {
+    bottom: 0;
+    margin-bottom: 0;
+    width: 100%;
+    margin-left: 0;
+    left: 0;
+    background: white;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    border-top: 0.5px solid #ececec;
+    height: 30px;
+    line-height: 30px;
+}
+
 
 /* - Responsive breakpoints - */
 
