--- a/css/main-style.css
+++ b/css/main-style.css
@@ -1239,6 +1239,7 @@ a.footer-cta-button:focus {
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
     color: white;
+    font-family: "RobotoCondensed-Regular";
 }
 
 .tab-pane .card-opis-vijesti,
