Added new search input for tenderi-pretraga.

--- a/css/main-style.css
+++ b/css/main-style.css
@@ -3478,6 +3478,18 @@ a.paginate_button.current,
     background: #00B496;
 }
 
+#datetimepicker1-tp,
+#datetimepicker1-dp,
+#datetimepicker2-tp,
+#datetimepicker2-dp,
+#vrijednost-tp {
+    margin: 0 0 25px 0;
+}
+
+.form-control-feedback {
+    z-index: 1;
+}
+
 
 /* - Responsive breakpoints - */
 
