--- a/css/main-style.css
+++ b/css/main-style.css
@@ -632,6 +632,7 @@ h1.naslov-kolone:after {
 .card-slika-vijesti {
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
+    width:100%;
 }
 
 .card-intro-vijesti {
